# stripe-filter-v2

./: CMakeLists.txt  LICENSE  README.md
basler/: BaslerApi.cpp  BaslerApi.h  BaslerLib.def  CMakeLists.txt  Camera.cpp  Camera.h  CameraApi.h  Definitions.h  Logger.cpp  Logger.h  LoggerApi.h
basler/vs_sln/: BaslerLib.sln  BaslerLib.vcxproj  BaslerLib.vcxproj.filters
filterapp/: AverageCalculator.h  BaslerInput.cpp  BaslerInput.h  CMakeLists.txt  CVInput.cpp  CVInput.h  ConsoleOutput.cpp  ConsoleOutput.h  FilterApplication.cpp  FilterApplication.h  FilterInput.h  FilterOutput.cpp  FilterOutput.h  FilterSettings.cpp  FilterSettings.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ModBus.cpp  ModBus.h  OutputDataForm.cpp  OutputDataForm.h  OutputDataForm.ui  RetryHandler.cpp  RetryHandler.h  SerialOutput.cpp  SerialOutput.h  SettingsForm.cpp  SettingsForm.h  SettingsForm.ui  filterapp.service  main.cpp
